# nexus-a2a-python

./: README.md  pyproject.toml
examples/: send-message-from-workflow-to-nexus-op-that-responds-with-message.py  send-message-from-workflow-to-nexus-op-that-starts-workflow-and-responds-with-task.py
src/nexus_a2a_python/: __init__.py  activities.py  service.py  workflow_transport.py
