[project]
name = "nexus-a2a-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dan Davison", email = "dan.davison@temporal.io" }
]
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.3",
    "litellm>=1.76.0",
    "temporalio>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
